fix: spacing of elements for mobile

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,7 @@
 
 .main {
     max-width: fit-content;
-    margin: 10rem auto;
+    margin: 3rem auto;
 
     display: flex;
     flex-direction: column;
@@ -9,6 +9,14 @@
     align-items: center;
     
     text-align: center;
+
+    @media screen and (min-width: 810px) {
+        margin: 6rem auto;
+    }
+
+    @media screen and (min-width: 1438px) {
+        margin: 10rem auto;
+    }
 }
 
 .heading {
